// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationCounts renders  component with a mock record metrics 1`] = `
<CitationCounts
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Tweedy, S. M.",
          "rek_author_id": 29135061,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:137936",
          "rek_author_xsdmf_id": 6230,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 406,
          "rek_author_id_id": 28502077,
          "rek_author_id_lookup": "Tweedy, Sean M.",
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:137936",
          "rek_author_id_xsdmf_id": 6225,
        },
      ],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": Object {
        "rek_book_title": "Health Care Practice in Australia",
        "rek_book_title_id": 298671,
        "rek_book_title_pid": "UQ:137936",
        "rek_book_title_xsdmf_id": 10630,
      },
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Taylor, Sandra",
          "rek_contributor_id": 3143123,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:137936",
          "rek_contributor_xsdmf_id": 6238,
        },
        Object {
          "rek_contributor": "Foster, Michele",
          "rek_contributor_id": 3143124,
          "rek_contributor_order": 2,
          "rek_contributor_pid": "UQ:137936",
          "rek_contributor_xsdmf_id": 6238,
        },
        Object {
          "rek_contributor": "Fleming, Jennifer",
          "rek_contributor_id": 3143125,
          "rek_contributor_order": 3,
          "rek_contributor_pid": "UQ:137936",
          "rek_contributor_xsdmf_id": 6238,
        },
      ],
      "fez_record_search_key_contributor_id": Array [
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2345832,
          "rek_contributor_id_order": 1,
          "rek_contributor_id_pid": "UQ:137936",
          "rek_contributor_id_xsdmf_id": 6233,
        },
        Object {
          "rek_contributor_id": 295,
          "rek_contributor_id_id": 2345833,
          "rek_contributor_id_lookup": "Foster, Michele M.",
          "rek_contributor_id_order": 2,
          "rek_contributor_id_pid": "UQ:137936",
          "rek_contributor_id_xsdmf_id": 6233,
        },
        Object {
          "rek_contributor_id": 255,
          "rek_contributor_id_id": 2345834,
          "rek_contributor_id_lookup": "Fleming, Jennifer Michelle",
          "rek_contributor_id_order": 3,
          "rek_contributor_id_pid": "UQ:137936",
          "rek_contributor_id_xsdmf_id": 6233,
        },
      ],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": null,
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": null,
      "fez_record_search_key_edition": null,
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": Object {
        "rek_end_page": "269",
        "rek_end_page_id": 5558697,
        "rek_end_page_pid": "UQ:137936",
        "rek_end_page_xsdmf_id": 6266,
      },
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": Object {
        "rek_herdc_code": 450006,
        "rek_herdc_code_id": 4725870,
        "rek_herdc_code_lookup": "B1",
        "rek_herdc_code_pid": "UQ:137936",
        "rek_herdc_code_xsdmf_id": 12389,
      },
      "fez_record_search_key_herdc_status": Object {
        "rek_herdc_status": 453221,
        "rek_herdc_status_id": 3616374,
        "rek_herdc_status_lookup": "Confirmed Code",
        "rek_herdc_status_pid": "UQ:137936",
        "rek_herdc_status_xsdmf_id": 12405,
      },
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [
        Object {
          "rek_isbn": "9780195558333",
          "rek_isbn_id": 1082683,
          "rek_isbn_order": 1,
          "rek_isbn_pid": "UQ:137936",
          "rek_isbn_xsdmf_id": 10820,
        },
      ],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:3829",
          "rek_ismemberof_id": 11654231,
          "rek_ismemberof_lookup": "School of Human Movement and Nutrition Sciences Publications",
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:137936",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:138536",
          "rek_ismemberof_id": 11654232,
          "rek_ismemberof_lookup": "2009 Higher Education Research Data Collection",
          "rek_ismemberof_order": 2,
          "rek_ismemberof_pid": "UQ:137936",
          "rek_ismemberof_xsdmf_id": 149,
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": null,
      "fez_record_search_key_link": Array [],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": null,
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Melbourne",
        "rek_place_of_publication_id": 4228542,
        "rek_place_of_publication_pid": "UQ:137936",
        "rek_place_of_publication_xsdmf_id": 6258,
      },
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "Oxford University Press",
        "rek_publisher_id": 4494808,
        "rek_publisher_pid": "UQ:137936",
        "rek_publisher_xsdmf_id": 6259,
      },
      "fez_record_search_key_pubmed_central_id": null,
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": Object {
        "rek_refereed_source": "453638",
        "rek_refereed_source_id": 1258088,
        "rek_refereed_source_lookup": "Not yet assessed",
        "rek_refereed_source_pid": "UQ:137936",
        "rek_refereed_source_xsdmf_id": 16623,
      },
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": null,
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": Object {
        "rek_start_page": "255",
        "rek_start_page_id": 5631041,
        "rek_start_page_pid": "UQ:137936",
        "rek_start_page_xsdmf_id": 6265,
      },
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [
        Object {
          "rek_subject": 450006,
          "rek_subject_id": 9209064,
          "rek_subject_lookup": "B1",
          "rek_subject_order": 1,
          "rek_subject_pid": "UQ:137936",
          "rek_subject_xsdmf_id": 6244,
        },
        Object {
          "rek_subject": 452653,
          "rek_subject_id": 9209065,
          "rek_subject_lookup": "111703 Care for Disabled",
          "rek_subject_order": 2,
          "rek_subject_pid": "UQ:137936",
          "rek_subject_xsdmf_id": 6244,
        },
        Object {
          "rek_subject": 452662,
          "rek_subject_id": 9209066,
          "rek_subject_lookup": "111712 Health Promotion",
          "rek_subject_order": 3,
          "rek_subject_pid": "UQ:137936",
          "rek_subject_xsdmf_id": 6244,
        },
        Object {
          "rek_subject": 451433,
          "rek_subject_id": 9209067,
          "rek_subject_lookup": "920403 Disability and Functional Capacity",
          "rek_subject_order": 4,
          "rek_subject_pid": "UQ:137936",
          "rek_subject_xsdmf_id": 6244,
        },
      ],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": Object {
        "rek_total_chapters": "14",
        "rek_total_chapters_id": 196266,
        "rek_total_chapters_pid": "UQ:137936",
        "rek_total_chapters_xsdmf_id": 9644,
      },
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "15",
        "rek_total_pages_id": 5544814,
        "rek_total_pages_pid": "UQ:137936",
        "rek_total_pages_xsdmf_id": 9632,
      },
      "fez_record_search_key_transcript": null,
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": "<a class=\\"author_id_link\\" title=\\"Browse by Author ID for Tweedy, S. M.\\" href=\\"/list/author_id/406/\\">Tweedy, S. M.</a> (<span class=\\"citation_date\\">2008</span>). <a class=\\"citation_title\\" title=\\"Click to view Book Chapter: Reducing preventable health disadvantage for people with disabilities through physical activity promotion\\" href=\\"/view/UQ:137936\\">Reducing preventable health disadvantage for people with disabilities through physical activity promotion</a>. In <span class=\\"citation_contributor\\"><span class=\\"citation_contributor\\">Taylor, Sandra</span>, <span class=\\"citation_contributor\\">Foster, Michele</span> and <span class=\\"citation_contributor\\">Fleming, Jennifer</span></span> (Ed.), <i><span class=\\"citation_book_title\\">Health Care Practice in Australia</span></i>  (pp. <span class=\\"citation_start_page\\">255</span>-<span class=\\"citation_end_page\\">269</span>)  <span class=\\"citation_place_of_publication\\">Melbourne</span>: <span class=\\"citation_publisher\\">Oxford University Press</span>.",
      "rek_copyright": "on",
      "rek_copyright_xsdmf_id": 3679,
      "rek_created_date": "2008-05-08T13:05:29Z",
      "rek_created_date_xsdmf_id": 3677,
      "rek_date": "2008-01-01T00:00:00Z",
      "rek_date_xsdmf_id": 6260,
      "rek_depositor": 1577,
      "rek_depositor_affiliation": 933,
      "rek_depositor_affiliation_xsdmf_id": 11881,
      "rek_depositor_xsdmf_id": 7578,
      "rek_description": null,
      "rek_description_xsdmf_id": null,
      "rek_display_type": 177,
      "rek_display_type_lookup": "Book Chapter",
      "rek_display_type_xsdmf_id": 3673,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": "Book Chapter",
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": 7201,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_lookup": "Record",
      "rek_object_type_xsdmf_id": 3674,
      "rek_pid": "UQ:137936",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_lookup": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_lookup": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": 1,
      "rek_status": 2,
      "rek_status_lookup": "Published",
      "rek_status_xsdmf_id": 3680,
      "rek_subtype": "Research book chapter (original research)",
      "rek_subtype_xsdmf_id": 12378,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Reducing preventable health disadvantage for people with disabilities through physical activity promotion",
      "rek_title_xsdmf_id": 10623,
      "rek_updated_date": "2014-10-04T15:22:27Z",
      "rek_updated_date_xsdmf_id": 3678,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_lookup": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationCounts columns is-multiline is-gapless is-marginless"
  >
    <CitationCountView
      count={null}
      link="https://scholar.google.com/scholar?q=intitle:[id]Reducing%20preventable%20health%20disadvantage%20for%20people%20with%20disabilities%20through%20physical%20activity%20promotion"
      source="google"
      title="Link to Reducing preventable health disadvantage for people with disabilities through physical activity promotion (Google scholar) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to Reducing preventable health disadvantage for people with disabilities through physical activity promotion (Google scholar) will open in a new window."
          className="googleCitationCount"
          href="https://scholar.google.com/scholar?q=intitle:[id]Reducing%20preventable%20health%20disadvantage%20for%20people%20with%20disabilities%20through%20physical%20activity%20promotion"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to Reducing preventable health disadvantage for people with disabilities through physical activity promotion (Google scholar) will open in a new window."
        >
          <a
            aria-label="Link to Reducing preventable health disadvantage for people with disabilities through physical activity promotion (Google scholar) will open in a new window."
            className="googleCitationCount"
            href="https://scholar.google.com/scholar?q=intitle:[id]Reducing%20preventable%20health%20disadvantage%20for%20people%20with%20disabilities%20through%20physical%20activity%20promotion"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to Reducing preventable health disadvantage for people with disabilities through physical activity promotion (Google scholar) will open in a new window."
          >
            <div
              className="fez-icon google large"
            />
            <span
              className="citationCountNumber"
            />
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
  </div>
</CitationCounts>
`;

exports[`CitationCounts renders  component with all metrics 1`] = `
<CitationCounts
  publication={
    Object {
      "fez_record_search_key_isi_loc": Object {
        "rek_isi_loc": 12345,
      },
      "fez_record_search_key_oa_status": Object {
        "rek_oa_status": 453693,
      },
      "fez_record_search_key_scopus_id": Object {
        "rek_scopus_id": 12345,
      },
      "rek_altmetric_id": 12345,
      "rek_altmetric_score": 1,
      "rek_gs_citation_count": 1,
      "rek_pid": "pid:111",
      "rek_scopus_citation_count": 1,
      "rek_thomson_citation_count": 1,
    }
  }
>
  <div
    className="citationCounts columns is-multiline is-gapless is-marginless"
  >
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
      source="wos"
      title="Link to undefined (Web of science) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Web of science) will open in a new window."
          className="wosCitationCount"
          href="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Web of science) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Web of science) will open in a new window."
            className="wosCitationCount"
            href="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Web of science) will open in a new window."
          >
            <div
              className="fez-icon wos large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
      source="scopus"
      title="Link to undefined (Scopus) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Scopus) will open in a new window."
          className="scopusCitationCount"
          href="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Scopus) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Scopus) will open in a new window."
            className="scopusCitationCount"
            href="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Scopus) will open in a new window."
          >
            <div
              className="fez-icon scopus large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <CitationCountView
      count={1}
      link="http://www.altmetric.com/details.php?citation_id=12345"
      source="altmetric"
      title="Link to undefined (Altmetric) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Altmetric) will open in a new window."
          className="altmetricCitationCount"
          href="http://www.altmetric.com/details.php?citation_id=12345"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Altmetric) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Altmetric) will open in a new window."
            className="altmetricCitationCount"
            href="http://www.altmetric.com/details.php?citation_id=12345"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Altmetric) will open in a new window."
          >
            <div
              className="fez-icon altmetric large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <CitationCountView
      count={1}
      link="https://scholar.google.com/scholar?q=intitle:[id]undefined"
      source="google"
      title="Link to undefined (Google scholar) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Google scholar) will open in a new window."
          className="googleCitationCount"
          href="https://scholar.google.com/scholar?q=intitle:[id]undefined"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Google scholar) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Google scholar) will open in a new window."
            className="googleCitationCount"
            href="https://scholar.google.com/scholar?q=intitle:[id]undefined"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Google scholar) will open in a new window."
          >
            <div
              className="fez-icon google large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <span
      className="citationCount"
    >
      <div
        className="fez-icon openAccess large"
        title="Open Access - DOI - Free to read (embargo date might apply)"
      />
    </span>
    <div
      className="citationCount column"
    >
      <div
        className="columns is-mobile is-gapless"
      >
        <div
          className="column is-narrow citationCountNumber"
        >
          <ExternalLink
            className="externalLink"
            href="https://app.library.uq.edu.au/#/authors/view/pid:111"
            openInNewIcon={true}
            rel="noopener noreferrer"
            target="_blank"
          >
            <a
              className="externalLink"
              href="https://app.library.uq.edu.au/#/authors/view/pid:111"
              rel="noopener noreferrer"
              tabIndex="0"
              target="_blank"
            >
              View full statistics
              <ActionOpenInNew
                className="openExternalUrlIcon"
              >
                <SvgIcon
                  className="openExternalUrlIcon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  viewBox="0 0 24 24"
                >
                  <svg
                    className="openExternalUrlIcon"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                    />
                  </svg>
                </SvgIcon>
              </ActionOpenInNew>
            </a>
          </ExternalLink>
        </div>
      </div>
    </div>
  </div>
</CitationCounts>
`;

exports[`CitationCounts renders  component with no metrics 1`] = `
<CitationCounts
  publication={Object {}}
>
  <div
    className="citationCounts columns is-multiline is-gapless is-marginless"
  />
</CitationCounts>
`;

exports[`CitationCounts renders  component with non rendering oa status 1`] = `
<CitationCounts
  publication={
    Object {
      "fez_record_search_key_isi_loc": Object {
        "rek_isi_loc": 12345,
      },
      "fez_record_search_key_oa_status": Object {
        "rek_oa_status": 453698,
      },
      "fez_record_search_key_scopus_id": Object {
        "rek_scopus_id": 12345,
      },
      "rek_altmetric_id": 12345,
      "rek_altmetric_score": 1,
      "rek_gs_citation_count": 1,
      "rek_pid": "pid:111",
      "rek_scopus_citation_count": 1,
      "rek_thomson_citation_count": 1,
    }
  }
>
  <div
    className="citationCounts columns is-multiline is-gapless is-marginless"
  >
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
      source="wos"
      title="Link to undefined (Web of science) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Web of science) will open in a new window."
          className="wosCitationCount"
          href="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Web of science) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Web of science) will open in a new window."
            className="wosCitationCount"
            href="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Web of science) will open in a new window."
          >
            <div
              className="fez-icon wos large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
      source="scopus"
      title="Link to undefined (Scopus) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Scopus) will open in a new window."
          className="scopusCitationCount"
          href="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Scopus) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Scopus) will open in a new window."
            className="scopusCitationCount"
            href="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Scopus) will open in a new window."
          >
            <div
              className="fez-icon scopus large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <CitationCountView
      count={1}
      link="http://www.altmetric.com/details.php?citation_id=12345"
      source="altmetric"
      title="Link to undefined (Altmetric) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Altmetric) will open in a new window."
          className="altmetricCitationCount"
          href="http://www.altmetric.com/details.php?citation_id=12345"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Altmetric) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Altmetric) will open in a new window."
            className="altmetricCitationCount"
            href="http://www.altmetric.com/details.php?citation_id=12345"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Altmetric) will open in a new window."
          >
            <div
              className="fez-icon altmetric large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <CitationCountView
      count={1}
      link="https://scholar.google.com/scholar?q=intitle:[id]undefined"
      source="google"
      title="Link to undefined (Google scholar) will open in a new window."
    >
      <span
        className="citationCount"
      >
        <ExternalLink
          aria-label="Link to undefined (Google scholar) will open in a new window."
          className="googleCitationCount"
          href="https://scholar.google.com/scholar?q=intitle:[id]undefined"
          openInNewIcon={false}
          rel="noopener noreferrer"
          target="_blank"
          title="Link to undefined (Google scholar) will open in a new window."
        >
          <a
            aria-label="Link to undefined (Google scholar) will open in a new window."
            className="googleCitationCount"
            href="https://scholar.google.com/scholar?q=intitle:[id]undefined"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Link to undefined (Google scholar) will open in a new window."
          >
            <div
              className="fez-icon google large"
            />
            <span
              className="citationCountNumber"
            >
              1
            </span>
          </a>
        </ExternalLink>
      </span>
    </CitationCountView>
    <div
      className="citationCount column"
    >
      <div
        className="columns is-mobile is-gapless"
      >
        <div
          className="column is-narrow citationCountNumber"
        >
          <ExternalLink
            className="externalLink"
            href="https://app.library.uq.edu.au/#/authors/view/pid:111"
            openInNewIcon={true}
            rel="noopener noreferrer"
            target="_blank"
          >
            <a
              className="externalLink"
              href="https://app.library.uq.edu.au/#/authors/view/pid:111"
              rel="noopener noreferrer"
              tabIndex="0"
              target="_blank"
            >
              View full statistics
              <ActionOpenInNew
                className="openExternalUrlIcon"
              >
                <SvgIcon
                  className="openExternalUrlIcon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  viewBox="0 0 24 24"
                >
                  <svg
                    className="openExternalUrlIcon"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                    />
                  </svg>
                </SvgIcon>
              </ActionOpenInNew>
            </a>
          </ExternalLink>
        </div>
      </div>
    </div>
  </div>
</CitationCounts>
`;
